# YoloV8_rknn

./: CMakeLists.txt  README.md  check_ai_model.sh  check_rga.sh  main.cpp  sink
rknn_model/: rknpu2_yolo8.cpp
src/MultiCameraManager/: CameraContext.h  multi_thread.cpp  multi_thread.h
src/ThreadPool/: ThreadPool.cpp  ThreadPool.h
src/WebRTC/: WebRTC.cpp  WebRTC.h
src/Yolo8InitModel/: Yolo8InitModel.cpp  Yolo8InitModel.h
src/nv12_converter/: nv12_converter.cpp  nv12_converter.h
src/nv12_converter_all_formats/: nv12_converter_all_formats.cpp  nv12_converter_all_formats.h
src/rtspProcess/: mpp_rtspProcess.cpp  mpp_rtspProcess.h  openGL_rtspProcess.cpp  openGL_rtspProcess.h
src/rtspReader/: rtspReader.cpp  rtspReader.h
